# pypassmgr

./: .gitignore  README.md  convertPWfile.py  pypassmgr.py  pyproject.toml  randomart.py  test.txt
pypassmgr/: __init__.py  convertPWfile.py  pw_manager.py
pypassmgr/urwid_routines/: __init__.py  display_routines.py  dual_editor.py
urwid_routines/: dual_editor.py
