[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pypassmgr"
version = "1.1.0"
authors = [{name = "Aaron M.", email = "aaronm6@gmail.com"},]
license = "GPL-3.0"
readme = "README.md"
description = "Simple command-line encrypted password/secret manager"
#dependencies = ["cryptography>=42.0.5","urwid<=2.1.2","pyrandomart>=1.1.1"]
dependencies = ["cryptography>=42.0.5","urwid>=3.0.2","pyrandomart>=1.1.1"]
classifiers = ["Programming Language :: Python :: 3",]

[project.urls]
Repository = "https://github.com/aaronm6/pypassmgr"

[project.scripts]
pypass = "pypassmgr:main"
pw_load_backup = "pypassmgr.convertPWfile:main"

[tool.setuptools]
package-dir = {"" = "."}
