[build-system]
requires = [
  "setuptools >= 61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pypassmgr"
authors = [{name = "Aaron M.", email = "aaronm6@gmail.com"},]
license = "GPL-3.0"
readme = "README.md"
description = "Simple command-line encrypted password/secret manager"
requires-python = ">=3.9.0"
dependencies = ["cryptography>=42.0.5","urwid>=3.0.2","pyrandomart>=1.1.1"]
classifiers = ["Programming Language :: Python :: 3",]
version = "1.1.2"

[project.urls]
Repository = "https://github.com/aaronm6/pypassmgr"

[project.scripts]
pypass = "pypassmgr:main"
pw_load_backup = "pypassmgr.convertPWfile:main"

[tool.setuptools]
package-dir = {"" = "."}
platforms=["unix-like"]
zip-safe = false
